--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,65 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{lotito2023hypergraphx,
+  title={Hypergraphx: a library for higher-order network analysis},
+  author={Lotito, Quintino Francesco and Contisciani, Martina and De Bacco, Caterina and Di Gaetano, Leonardo and Gallo, Luca and Montresor, Alberto and Musciotto, Federico and Ruggeri, Nicol{\`o} and Battiston, Federico},
+  journal={Journal of Complex Networks},
+  volume={11},
+  number={3},
+  pages={cnad019},
+  year={2023},
+  publisher={Oxford University Press}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{di2022maximal,
+  title={Maximal dispersion of adaptive random walks},
+  author={Di Bona, Gabriele and Di Gaetano, Leonardo and Latora, Vito and Coghi, Francesco},
+  journal={Physical Review Research},
+  volume={4},
+  number={4},
+  pages={L042051},
+  year={2022},
+  publisher={APS}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{chowdhary2023temporal,
+  title={Temporal patterns of reciprocity in communication networks},
+  author={Chowdhary, Sandeep and Andres, Elsa and Manna, Adriana and Blagojevi{\'c}, Luka and Di Gaetano, Leonardo and I{\~n}iguez, Gerardo},
+  journal={EPJ Data Science},
+  volume={12},
+  number={1},
+  pages={7},
+  year={2023},
+  publisher={Springer Berlin Heidelberg}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{di2023percolation,
+  title={Percolation and topological properties of temporal higher-order networks},
+  author={Di Gaetano, Leonardo and Battiston, Federico and Starnini, Michele},
+  journal={arXiv preprint arXiv:2306.00779},
+  year={2023}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{caligiuri2023lyapunov,
+  title={Lyapunov exponents for temporal networks},
+  author={Caligiuri, Annalisa and Egu{\'\i}luz, Victor M and Di Gaetano, Leonardo and Galla, Tobias and Lacasa, Lucas},
+  journal={Physical Review E},
+  volume={107},
+  number={4},
+  pages={044305},
+  year={2023},
+  publisher={APS}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{di2023dynamical,
+  title={Dynamical fluctuations in a minimal model of higher-order networks},
+  author={Di Gaetano, Leonardo and Carugno, Giorgio and Battiston, Federico and Coghi, Francesco},
+  journal={arXiv preprint arXiv:2303.18169},
+  year={2023}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+
+@article{abella2023unraveling,
+  title={Unraveling higher-order dynamics in collaboration networks},
+  author={Abella, David and Birello, Piero and Di Gaetano, Leonardo and Ghivarello, Sara and Sabhahit, Narayan G and Sirocchi, Christel and Fern{\'a}ndez-Gracia, Juan},
+  journal={arXiv preprint arXiv:2306.17521},
+  year={2023}
 }
