--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,8 @@
+---
+---
+
+@string{aps = {American Physical Society,}}
+
 @article{lotito2023hypergraphx,
   title={Hypergraphx: a library for higher-order network analysis},
   author={Lotito, Quintino Francesco and Contisciani, Martina and De Bacco, Caterina and Di Gaetano, Leonardo and Gallo, Luca and Montresor, Alberto and Musciotto, Federico and Ruggeri, Nicol{\`o} and Battiston, Federico},
