--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,11 +36,15 @@
   publisher={Springer Berlin Heidelberg}
 }
 
-@article{di2023percolation,
+@article{di2024percolation,
   title={Percolation and topological properties of temporal higher-order networks},
   author={Di Gaetano, Leonardo and Battiston, Federico and Starnini, Michele},
-  journal={arXiv preprint arXiv:2306.00779},
-  year={2023}
+  journal={Physical Review Letters},
+  volume={132},
+  number={3},
+  pages={037401},
+  year={2024},
+  publisher={APS}
 }
 
 @article{caligiuri2023lyapunov,
@@ -54,11 +58,15 @@
   publisher={APS}
 }
 
-@article{di2023dynamical,
-  title={Dynamical fluctuations in a minimal model of higher-order networks},
+@article{di2024dynamical,
+  title={Dynamical Fluctuations of Random Walks in Higher-Order Networks},
   author={Di Gaetano, Leonardo and Carugno, Giorgio and Battiston, Federico and Coghi, Francesco},
-  journal={arXiv preprint arXiv:2303.18169},
-  year={2023}
+  journal={Physical Review Letters},
+  volume={133},
+  number={10},
+  pages={107401},
+  year={2024},
+  publisher={APS}
 }
 
 
@@ -67,4 +75,20 @@
   author={Abella, David and Birello, Piero and Di Gaetano, Leonardo and Ghivarello, Sara and Sabhahit, Narayan G and Sirocchi, Christel and Fern{\'a}ndez-Gracia, Juan},
   journal={arXiv preprint arXiv:2306.17521},
   year={2023}
+}
+
+@article{di2024neighbourhood,
+  title={Neighbourhood topology unveils pathological hubs in the brain networks of epilepsy-surgery patients},
+  author={Di Gaetano, Leonardo and Santos, Fernando AN and Battiston, Federico and Bianconi, Ginestra and Defenu, Nicolo and Nissen, Ida and van Straaten, Elisabeth CW and Hillebrand, Arjan and Millan, Ana P},
+  journal={medRxiv},
+  pages={2024--10},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@article{robiglio2024higher,
+  title={Higher-order Ising model on hypergraphs},
+  author={Robiglio, Thomas and Di Gaetano, Leonardo and Altieri, Ada and Petri, Giovanni and Battiston, Federico},
+  journal={arXiv preprint arXiv:2411.19618},
+  year={2024}
 }
